--- a/Driver_DS/platformio.ini
+++ b/Driver_DS/platformio.ini
@@ -12,3 +12,8 @@
 platform = teensy
 board = teensy41
 framework = arduino
+lib_deps = 
+	bogde/HX711@^0.7.4
+	openagriculturefoundation/rosserial_arduino@0.0.0-alpha+sha.1834b766b0
+	adafruit/Adafruit NeoPixel@^1.10.0
+	frankjoshua/Rosserial Arduino Library@^0.9.1
